[package]
name = "lms"
version = "0.4.1"
authors = ["Wesley Chang <wesleycanada@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast and reliable alternative to rsync for synchronizing local files"

repository = "https://github.com/safai-labs/lumins"
readme = "./README.md"
keywords = ["rsync", "linux", "file", "cli", "sync"]
categories = ["command-line-utilities", "filesystem", ]

[lib]
name = "lms"
path = "src/lib.rs"

[[bin]]
name = "lms"
path = "src/main.rs"

[badges]
travis-ci = { repository = "safai-labs/LuminS", branch = "master" }
codecov = { repository = "safai-labs/LuminS", branch = "master", service = "github" }



[dependencies]
clap = { version = "3.2.20", features = ["yaml"] }
rayon = "1.5.3"
blake2 = "0.10.4"
hashbrown = { version = "0.12.3", features = ["rayon", "bumpalo"] }
seahash = "4.1.0"
env_logger = "0.9.0"
log = "0.4.17"
indicatif = "0.17.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
